Fix spacing in matrices and similar environments (#905)
- use CSS to remove padding at the edges
- set character class of `\\` correctly

ref #901

--- a/playground/mathmlfixes.css
+++ b/playground/mathmlfixes.css
@@ -1,3 +1,11 @@
+mtr > mtd:first-child {
+    padding-left: 0;
+}
+
+mtr > mtd:last-child {
+    padding-right: 0;
+}
+
 /* Styles for Chromium only */
 @supports (not (-webkit-backdrop-filter: blur(1px))) and
     (not (-moz-appearance: none)) {
